<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg">

    <TextView
        android:id="@+id/menu_tv"
        style="@style/cloak_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_tv_bg"
        android:text="@string/menu_title"
        app:layout_constraintBottom_toTopOf="@id/game1_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game1_title"
        style="@style/cloak_small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_tv_bg"
        android:text="@string/find_matching_images"
        app:layout_constraintBottom_toTopOf="@id/menu_btn"
        app:layout_constraintEnd_toStartOf="@id/game2_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_tv" />

    <TextView
        android:id="@+id/game2_title"
        style="@style/cloak_small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_tv_bg"
        android:text="@string/catch_the_eagle_title"
        app:layout_constraintBottom_toTopOf="@id/menu_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/game1_title"
        app:layout_constraintTop_toBottomOf="@id/menu_tv" />

    <Button
        android:id="@+id/menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu_btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game1_title" />

    <Button
        android:id="@+id/menu_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_btn2_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu_btn"
        app:layout_constraintTop_toBottomOf="@id/game2_title" />

</androidx.constraintlayout.widget.ConstraintLayout>